--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,19 +10,19 @@
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary: 251 79% 60%; /* #6049ea */
+    --primary-foreground: 0 0% 100%;
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+    --accent: 251 79% 60%;
+    --accent-foreground: 0 0% 100%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
+    --ring: 251 79% 60%;
     --radius: 1.125rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
@@ -32,25 +32,25 @@
   }
 
   .dark {
-    --background: 0 0% 20%; /* #333333 */
-    --foreground: 0 0% 94.1%; /* #F0F0F0 */
-    --card: 0 0% 25%; /* Slightly lighter than background for depth */
-    --card-foreground: 0 0% 94.1%; /* #F0F0F0 */
-    --popover: 0 0% 20%; /* #333333 */
-    --popover-foreground: 0 0% 94.1%; /* #F0F0F0 */
-    --primary: 0 0% 94.1%; /* #F0F0F0 */
-    --primary-foreground: 0 0% 10%; /* Darker for contrast on primary */
-    --secondary: 0 0% 43.9%; /* #707070 */
-    --secondary-foreground: 0 0% 94.1%; /* #F0F0F0 */
-    --muted: 0 0% 43.9%; /* #707070 */
-    --muted-foreground: 0 0% 69%; /* #B0B0B0 */
-    --accent: 0 0% 43.9%; /* #707070 */
-    --accent-foreground: 0 0% 100%; /* #FFFFFF */
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 43.9%; /* #707070 */
-    --input: 0 0% 43.9%; /* #707070 */
-    --ring: 0 0% 69%; /* #B0B0B0 */
+    --background: 0 0% 0%; /* #000000 */
+    --foreground: 0 0% 100%; /* #ffffff */
+    --card: 0 0% 10%; /* Slightly lighter than background for depth */
+    --card-foreground: 0 0% 100%;
+    --popover: 0 0% 5%;
+    --popover-foreground: 0 0% 100%;
+    --primary: 251 79% 60%; /* #6049ea */
+    --primary-foreground: 0 0% 100%;
+    --secondary: 0 0% 15%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 0 0% 15%;
+    --muted-foreground: 0 0% 60%;
+    --accent: 251 79% 60%; /* #6049ea */
+    --accent-foreground: 0 0% 100%;
+    --destructive: 0 63% 31%;
+    --destructive-foreground: 0 0% 100%;
+    --border: 0 0% 20%;
+    --input: 0 0% 20%;
+    --ring: 251 79% 60%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
