--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,10 +76,10 @@
   @keyframes zoom-in-out {
     0%,
     100% {
-      transform: scale(1);
+      transform: scale(0.8);
     }
     50% {
-      transform: scale(1.2);
+      transform: scale(1.5);
     }
   }
 
@@ -117,8 +117,14 @@
       357px 1138px #FFF, 621px 1965px #FFF, 1928px 127px #FFF, 1974px 1980px #FFF, 93px 1162px #FFF,
       1265px 1845px #FFF, 1425px 446px #FFF, 848px 1583px #FFF, 120px 143px #FFF, 1056px 1201px #FFF,
       1203px 1032px #FFF, 137px 1721px #FFF, 1944px 1002px #FFF, 755px 1284px #FFF, 1445px 1913px #FFF,
-      2000px 500px #FFF, 500px 1500px #FFF, 1000px 1000px #FFF, 750px 250px #FFF, 1250px 1750px #FFF;
-    animation: animStar 40s linear infinite;
+      2000px 500px #FFF, 500px 1500px #FFF, 1000px 1000px #FFF, 750px 250px #FFF, 1250px 1750px #FFF,
+       1889px 1386px #FFF, 1328px 1278px #FFF, 1733px 1863px #FFF, 1615px 537px #FFF, 481px 1353px #FFF,
+      969px 1583px #FFF, 1630px 108px #FFF, 1128px 26px #FFF, 602px 1478px #FFF, 1635px 1195px #FFF,
+      1369px 1289px #FFF, 1826px 1324px #FFF, 1246px 1568px #FFF, 228px 1184px #FFF, 124px 1774px #FFF,
+      1483px 1828px #FFF, 953px 899px #FFF, 1521px 1827px #FFF, 1680px 1709px #FFF, 319px 789px #FFF,
+      1529px 163px #FFF, 123px 1716px #FFF, 1885px 182px #FFF, 1531px 100px #FFF, 1241px 1999px #FFF,
+      661px 1133px #FFF, 1992px 1019px #FFF, 1628px 116px #FFF, 1999px 1238px #FFF, 1646px 1648px #FFF;
+    animation: animStar 20s linear infinite;
   }
   
   #stars2 {
@@ -135,8 +141,12 @@
       357px 1138px #FFF, 621px 1965px #FFF, 1928px 127px #FFF, 1974px 1980px #FFF, 93px 1162px #FFF,
       1515px 537px #FFF, 381px 1353px #FFF, 869px 1583px #FFF, 1530px 108px #FFF, 1028px 26px #FFF,
       502px 1478px #FFF, 1535px 1195px #FFF, 1269px 1289px #FFF, 1726px 1324px #FFF, 1146px 1568px #FFF,
-      1800px 300px #FFF, 400px 1200px #FFF, 900px 800px #FFF, 1300px 100px #FFF, 1700px 1600px #FFF;
-    animation: animStar 80s linear infinite;
+      1800px 300px #FFF, 400px 1200px #FFF, 900px 800px #FFF, 1300px 100px #FFF, 1700px 1600px #FFF,
+      1483px 1828px #FFF, 953px 899px #FFF, 1521px 1827px #FFF, 1680px 1709px #FFF, 319px 789px #FFF,
+      1529px 163px #FFF, 123px 1716px #FFF, 1885px 182px #FFF, 1531px 100px #FFF, 1241px 1999px #FFF,
+      661px 1133px #FFF, 1992px 1019px #FFF, 1628px 116px #FFF, 1999px 1238px #FFF, 1646px 1648px #FFF,
+      1689px 428px #FFF, 1239px 74px #FFF, 245px 339px #FFF, 1799px 1198px #FFF, 1929px 1729px #FFF;
+    animation: animStar 40s linear infinite;
   }
   
   #stars3 {
@@ -150,7 +160,10 @@
       1203px 1032px #FFF, 137px 1721px #FFF, 1944px 1002px #FFF, 755px 1284px #FFF, 1445px 1913px #FFF,
       1591px 1824px #FFF, 1373px 1585px #FFF, 1836px 1888px #FFF, 622px 135px #FFF, 1469px 963px #FFF,
       333px 446px #FFF, 183px 1208px #FFF, 1845px 1419px #FFF, 1094px 1195px #FFF, 861px 571px #FFF,
-      1900px 900px #FFF, 200px 1800px #FFF, 1100px 600px #FFF, 600px 100px #FFF, 1400px 1400px #FFF;
-    animation: animStar 130s linear infinite;
+      1900px 900px #FFF, 200px 1800px #FFF, 1100px 600px #FFF, 600px 100px #FFF, 1400px 1400px #FFF,
+      1689px 428px #FFF, 1239px 74px #FFF, 245px 339px #FFF, 1799px 1198px #FFF, 1929px 1729px #FFF,
+      589px 692px #FFF, 263px 1100px #FFF, 1539px 28px #FFF, 1218px 461px #FFF, 1899px 490px #FFF,
+      1365px 1845px #FFF, 1525px 446px #FFF, 948px 1583px #FFF, 220px 143px #FFF, 1156px 1201px #FFF;
+    animation: animStar 65s linear infinite;
   }
 }
